# RAG-AI-AGENT-CHATB-BOT

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
faiss_index/: index.faiss  index.pkl
notebooks/: document.ipynb
scripts/: ingest_documents.py  rag_sanity_check.py
src/: __init__.py
src/core/: config.py
src/llm/: __init__.py  ollama_client.py
src/prompts/: __init__.py  templates.py
src/rag/: chunking.py  pipeline.py  retriever.py
src/ui/: streamlit_app.py
tests/: test_config.py  test_ollama_client.py  test_pipeline_cleaning.py  test_prompt_templates.py  test_retriever_reranking.py  test_sentence_chunking.py
vectordb/faiss_index/: index.faiss  index.pkl
